# linux_development_2025

./: .gitignore  Readme.md
01_TerminalProject/: Makefile  Readme.md  Show.c
02_Multifile/: Makefile  fun.c
03_Text/: Readme.md  randomize.sh
04_Debugging/: Makefile  Readme.md  range.c  range1.gdb  range2.gdb  real-range-1  real-range-2
05_Regexps/: Makefile  Readme.md  esub.c
06_Tracing/: Makefile  Readme.md  move.c  protect.c
07_Environmental/: Makefile.am  Readme.md  configure.ac  error_tests.sh  md5_tests.sh  sha1_tests.sh
07_Environmental/src/: rhasher.c
08_I18n/: Makefile.am  Readme.md  configure.ac
08_I18n/po/: ru.po
08_I18n/src/: Makefile.am  guesser.c
09_PatchDiff/: 0001-Define-W.patch  0002-Define-cells.patch  0003-Define-seed.patch  Makefile  Readme.md  lab.c
10_LibTesting/: Makefile.am  Readme.md  configure.ac
10_LibTesting/src/: Makefile.am  buf.c  libbuf.c
10_LibTesting/tests/: Makefile.am  dummy.ts  upstream.ts
11_Documenting/: Doxyfile.in  Makefile.am  Readme.md  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: Makefile.am  convert_to_md.sh  guesser.c
12_InstallPackaging/: Doxyfile.in  Makefile.am  Readme.md  configure.ac
12_InstallPackaging/po/: ru.po
12_InstallPackaging/src/: Makefile.am  guesser.c  guesser.h  libguesser.c
12_InstallPackaging/tests/: Makefile.am  dummy.ts  upstream.ts
